--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -404,7 +404,7 @@ before exposing the system to a large pool of users. These requirements are rela
 \input{../Reflection.tex}
 
 \begin{enumerate}
-    \item What went well while writing this deliverable?\\\\
+    \item What went well while writing this deliverable?
     As a team, we have a lot more experience working with eachother and assigning tasks based on expertise. This showed during this stage of the project. We were able to
     assign the tasks that could be completed independently so that our team meeting was focused on brainstorming the parts that would be better to work on together. Truthfully, we 
     were unable to work much on this deliverable until midway through last week (with the exception of Mathew, who provided the team with the first iteration of the harzard table). If we 
@@ -414,9 +414,9 @@ before exposing the system to a large pool of users. These requirements are rela
     we were only aware of some basic risks that we had heard about since childhood. However, investigating each topic related to our SRS made us think in-depth about other potential hazards. 
     We would say the aspect of research based on existing SRS went really well, as we learned a lot of new things. Although this deliverable was relatively shorter than the previous ones, we developed the habit of starting early. In the back of my mind, we knew what to 
     do and what was coming early on when this assignment was released. Another positive aspect was starting this assignment earlier and establishing a flow of ideas.
-    \\\\
+
     \item What pain points did you experience during this deliverable, and how
-    did you resolve them?\\\\
+    did you resolve them?
     As discussed above, there was a real challenge for the team to allocate time towards this deliverable. The team had personal commitments over reading week
     and 2/3 midterms in the first days back from reading week. We resolved them through a carefully planned team meeting, which was designed to gain alignment on any team decisions
     early in the week, so that the team could complete their assigned work when they had time to spare.
@@ -425,11 +425,11 @@ before exposing the system to a large pool of users. These requirements are rela
     we had to anticipate potential hazards concerning future libraries we might use. We did write specific risks related to a few of them, 
     but generalizing these risks was challenging, especially predicting the problems we might encounter, which is a necessary skill to develop.
     
-    \\\\
+
     \item Which of your listed risks had your team thought of before this
     deliverable, and which did you think of while doing this deliverable? For
     the latter ones (ones you thought of while doing the Hazard Analysis), how
-    did they come about?\\\\
+    did they come about?
     We were aware of risks to the data integrity before this deliverable. We have been thinking to methods to ensure that users are rewarded for being consistently accurate. Kartik also 
     made us aware of SQL injection and API vunerabilities, which he had learned about through his internship. Another thing that was raised was that deprecated libraries can cause significant 
     issues and how important it is to use stable versions during the development phase.\\
@@ -438,17 +438,16 @@ before exposing the system to a large pool of users. These requirements are rela
     we can reestablish connection with the user. They may have legitimate labels from this window if the system sends a buffer of images, but there is a risk that a malicious user could prepare 
     a package of automatically generated fake labels upon reconnection to increase their earnings. This bot activity would be hard to detect and mitigate, so we have decided to be conservative and block all labels
     made when not actively connected.
-    \\\\
+
     \item Other than the risk of physical harm (some projects may not have any
     appreciable risks of this form), list at least 2 other types of risk in
-    software products. Why are they important to consider?\\\\
+    software products. Why are they important to consider?
     A big risk is privacy. Users trust us to keep their personal information secure. In the past, the only way a malicious agent could collect so much personal data at one time 
     would be to break into a public records building. Now, there are thousands (maybe millions) of possible places they could get it. And they only need to find the one weakest link to break in. 
     It is the responsibility of every software designer to build with security at top of mind. This will ensure that the users are respected and protected.
     Also, there is a risk of behaviour modification from the use of software. This is harder to plan for, but after the introduction of software such as social media sites, it is unboubtably present.
     Misinformation, social isolation, and low-self image have all been in some way attributed to use of social media. The products we build should enhance the lives of the users they are built for
     and designing a site which exacerbates these symptoms is irresponsible.
-    \\\\
 
 \end{enumerate}
 \newpage
