--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -995,7 +995,7 @@ N/A
 
 \section{Maintainability and Support Requirements}
 \subsection{Maintenance Requirements}
-\subsubsection*{NFR-MR1}
+\subsubsection*{NFR-MR0}
 \begin{itemize}
   \item \textbf{Description:} All maintainance required for the system shall be possible to complete by a competent software developer after reading all of the documentation provided in the source repository.
   \item \textbf{Rationale:} The system should be well documented, and therefore maintainable after reading said documents.
@@ -1317,37 +1317,19 @@ A detailed budget forecast will be developed, encompassing all the aforementione
 
 \subsection{User Documentation Requirements}
 
-\subsubsection*{NFR-UD0} 
+        \subsubsection*{NFR-UD0} 
         \begin{itemize} 
-            \item \textbf{Description}: A complete user manual detailing all platform functionalities, including system access, navigation, image labeling, and account management, enhanced with visual aids like screenshots for clarity.  
-            \item \textbf{Rationale}: A thorough manual helps users find information independently, reducing support queries and ensuring they can maximize the platform’s potential.  
-            \item \textbf{Fit Criterion}: The manual should cover at least 95\% of the platform's features, and user feedback should reflect a 90\% satisfaction rate in terms of usefulness and comprehensiveness.
-        \end{itemize}
-        \subsubsection*{NFR-UD1} 
-        \begin{itemize} 
-            \item \textbf{Description}: A built-in help system with a searchable knowledge base, FAQs, and step-by-step guides to assist users with common issues or tasks directly within the platform.  
+            \item \textbf{Description}: A built-in help system with a searchable knowledge base, FAQs, user forums and step-by-step guides to assist users with common issues or tasks directly within the platform.  
             \item \textbf{Rationale}: An online help system provides quick, on-demand support, improving user experience by minimizing interruptions when seeking assistance.  
             \item \textbf{Fit Criterion}: At least 80\% of users should be able to resolve their issues using the help system without contacting support, as validated by user surveys and support metrics.
         \end{itemize}
-        \subsubsection*{NFR-UD1} 
-        \begin{itemize} 
-            \item \textbf{Description}: Detailed API documentation using a standard like OpenAPI, covering all endpoints, parameters, response formats, and authentication mechanisms to facilitate integration by external developers.  
-            \item \textbf{Rationale}: Well-documented APIs empower developers to integrate their applications with the platform seamlessly, fostering a wider ecosystem and usage.  
-            \item \textbf{Fit Criterion}: The API documentation should be comprehensive and accurate, with at least 90\% of developer feedback confirming clarity and ease of use.
-        \end{itemize}
-        \subsubsection*{NFR-UD2} 
-        \begin{itemize} 
-            \item \textbf{Description}: Timely release notes detailing new features, bug fixes, and system changes, ensuring users are kept informed about platform improvements and updates.  
-            \item \textbf{Rationale}: Regular release notes maintain transparency, keeping users informed and reducing confusion about new functionality or changes to existing features.  
-            \item \textbf{Fit Criterion}: Each major platform update should be accompanied by release notes, with at least 95\% coverage of changes, and users should report a clear understanding of new features based on feedback.
-        \end{itemize}
-        \subsubsection*{NFR-UD3}   
+        \subsubsection*{NFR-UD1}   
         \begin{itemize} 
             \item \textbf{Description}: A condensed guide offering a quick overview of key platform features and essential workflows to get users started rapidly.  
             \item \textbf{Rationale}: A quick start guide enables new users to become productive immediately without needing to read extensive documentation, improving their onboarding experience.  
             \item \textbf{Fit Criterion}: At least 90\% of new users should report the quick start guide as helpful, and they should be able to complete a basic labeling task within 15 minutes of using it.
         \end{itemize}
-        \subsubsection*{NFR-UD4} 
+        \subsubsection*{NFR-UD2} 
         \begin{itemize} 
             \item \textbf{Description}: Provide contextual help directly within the platform, such as tooltips and small info pop-ups, offering real-time guidance for features or form fields as users interact with them.  
             \item \textbf{Rationale}: In-app help reduces the learning curve and provides timely support without requiring users to leave the page or workflow they are on.  
@@ -1372,27 +1354,9 @@ A detailed budget forecast will be developed, encompassing all the aforementione
         \end{itemize}
         \subsubsection*{NFR-TR2} 
         \begin{itemize} 
-            \item \textbf{Description}: Targeted training materials and sessions tailored to different user groups, such as labelers, clients, and administrators, focusing on their unique needs and platform usage.  
-            \item \textbf{Rationale}: Customized training ensures that users receive relevant guidance, making them more efficient and effective in their roles on the platform.  
-            \item \textbf{Fit Criterion}: At least 90\% of users in specific groups should report that their training materials are relevant to their needs and improve their platform experience.
-        \end{itemize}
-        \subsubsection*{NFR-TR3} 
-        \begin{itemize} 
             \item \textbf{Description}: A sandbox environment allowing users to practice labeling tasks without affecting live data, including quizzes and exercises to assess understanding and improve skills.  
             \item \textbf{Rationale}: A practice environment enables users to build confidence and hone their skills in a low-pressure setting, ensuring they are prepared for real tasks.  
             \item \textbf{Fit Criterion}: At least 80\% of new users should utilize the practice environment, with self-assessment scores indicating an average improvement of 20\% in labeling accuracy over their first three attempts.
-        \end{itemize}
-        \subsubsection*{NFR-TR4}   
-        \begin{itemize} 
-            \item \textbf{Description}: Provide ongoing support through a community forum or discussion board where users can ask questions, share experiences, and learn from one another.  
-            \item \textbf{Rationale}: A support forum fosters a sense of community, provides peer-to-peer assistance, and reduces the load on formal support channels.  
-            \item \textbf{Fit Criterion}: At least 75\% of user questions in the community forum should be answered by either other users or support staff within 2 days.
-        \end{itemize}
-        \subsubsection*{NFR-TR5} 
-        \begin{itemize} 
-            \item \textbf{Description}: Conduct periodic assessments of user knowledge through quizzes or practical tasks to identify training gaps and offer refresher sessions where needed.  
-            \item \textbf{Rationale}: Regular assessments help ensure users retain knowledge and stay up-to-date with platform changes, enhancing overall productivity and satisfaction.  
-            \item \textbf{Fit Criterion}: At least 70\% of users should participate in training assessments, with scores indicating a consistent understanding of platform features and workflows.
         \end{itemize}
 
 
