Moved tut vids to help system

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -1319,7 +1319,7 @@ A detailed budget forecast will be developed, encompassing all the aforementione
 
         \subsubsection*{NFR-UD0} 
         \begin{itemize} 
-            \item \textbf{Description}: A built-in help system with a searchable knowledge base, FAQs, user forums and step-by-step guides to assist users with common issues or tasks directly within the platform.  
+            \item \textbf{Description}: A built-in help system with a searchable knowledge base, FAQs, tutorial videos, user forums and step-by-step guides to assist users with common issues or tasks directly within the platform.  
             \item \textbf{Rationale}: An online help system provides quick, on-demand support, improving user experience by minimizing interruptions when seeking assistance.  
             \item \textbf{Fit Criterion}: At least 80\% of users should be able to resolve their issues using the help system without contacting support, as validated by user surveys and support metrics.
         \end{itemize}
@@ -1327,13 +1327,13 @@ A detailed budget forecast will be developed, encompassing all the aforementione
         \begin{itemize} 
             \item \textbf{Description}: A condensed guide offering a quick overview of key platform features and essential workflows to get users started rapidly.  
             \item \textbf{Rationale}: A quick start guide enables new users to become productive immediately without needing to read extensive documentation, improving their onboarding experience.  
-            \item \textbf{Fit Criterion}: At least 90\% of new users should report the quick start guide as helpful, and they should be able to complete a basic labeling task within 15 minutes of using it.
+            \item \textbf{Fit Criterion}: At least 80\% of new users should report the quick start guide as helpful, and they should be able to complete a basic labeling task within 15 minutes of using it.
         \end{itemize}
         \subsubsection*{NFR-UD2} 
         \begin{itemize} 
             \item \textbf{Description}: Provide contextual help directly within the platform, such as tooltips and small info pop-ups, offering real-time guidance for features or form fields as users interact with them.  
             \item \textbf{Rationale}: In-app help reduces the learning curve and provides timely support without requiring users to leave the page or workflow they are on.  
-            \item \textbf{Fit Criterion}: At least 85\% of users should find in-app help intuitive and accurate in providing the necessary support as validated by user surveys.
+            \item \textbf{Fit Criterion}: At least 88\% of users should find in-app help intuitive and accurate in providing the necessary support as validated by user surveys.
         \end{itemize}
 
 
@@ -1344,15 +1344,9 @@ A detailed budget forecast will be developed, encompassing all the aforementione
         \begin{itemize} 
             \item \textbf{Description}: An onboarding tutorial guiding users through key platform functions interactively, offering tooltips and prompts to familiarize them with core workflows.  
             \item \textbf{Rationale}: Interactive onboarding accelerates learning, reduces user frustration, and ensures that new users can quickly perform tasks confidently.  
-            \item \textbf{Fit Criterion}: At least 85\% of users should complete the onboarding tutorial successfully within 20 minutes, with a 90\% rate of positive feedback on its effectiveness.
+            \item \textbf{Fit Criterion}: At least 85\% of users should complete the onboarding tutorial successfully within 20 minutes, with a 80\% rate of positive feedback on its effectiveness.
         \end{itemize}
-        \subsubsection*{NFR-TR1}   
-        \begin{itemize} 
-            \item \textbf{Description}: Short, focused video tutorials covering specific platform tasks (e.g., labeling, account setup) and periodic webinars for in-depth learning and live Q\&A sessions.  
-            \item \textbf{Rationale}: Video content provides a visual and engaging method for users to learn, while webinars offer opportunities for real-time interaction and deeper understanding.  
-            \item \textbf{Fit Criterion}: Each key platform feature should have a corresponding video tutorial, and at least 90\% of webinar attendees should rate the sessions as helpful in post-event feedback.
-        \end{itemize}
-        \subsubsection*{NFR-TR2} 
+        \subsubsection*{NFR-TR1} 
         \begin{itemize} 
             \item \textbf{Description}: A sandbox environment allowing users to practice labeling tasks without affecting live data, including quizzes and exercises to assess understanding and improve skills.  
             \item \textbf{Rationale}: A practice environment enables users to build confidence and hone their skills in a low-pressure setting, ensuring they are prepared for real tasks.  
