Added symbolic parameters table

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -514,6 +514,28 @@ This is where you can place additional information.
 The definition of the test cases will call for SYMBOLIC\_CONSTANTS.
 Their values are defined in this section for easy maintenance.
 
+\begin{longtable}{|l|l|l|p{4cm}|}
+  \hline
+  \textbf{Parameter} & \textbf{Value} & \textbf{Unit} & \textbf{Description} \\ \hline
+  \endfirsthead
+
+  \hline
+  \textbf{Parameter} & \textbf{Value} & \textbf{Unit} & \textbf{Description} \\ \hline
+  \endhead
+
+  \hline
+  \endfoot
+
+  \hline
+  MIN\_ON\_TIME\_MILESTONE & 80 & \% & Minimum percent of milestones that have been met on time \label{MIN_ON_TIME_MILESTONE} \\ \hline
+  BETA\_TESTERS & 50 & People & Number of beta testers \label{BETA_TESTERS} \\ \hline
+  MAX\_BUGS\_FOUND & 10 & Bugs & Number of software bugs found \label{MAX_BUGS_FOUND} \\ \hline
+  MIN\_USER\_HELP\_SATISFACTION & 80 & \% & Minimum percent of users satisfied with help feature \label{MIN_USER_HELP_SATISFACTION} \\ \hline
+  MAX\_TASK\_TIME & 15 & Minutes & Maximum time it takes a user to complete a task \label{MAX_TASK_TIME} \\ \hline
+  MIN\_PRACTICE\_USAGE & 80 & \% & Minimum percent of new users who have used the practice sandbox \label{MIN_PRACTICE_USAGE} \\ \hline
+  IMPROVE\_IN\_ACC & 20 & \% & Improvement in accuracy of a user after practicing \label{IMPROVE_IN_ACC} \\ \hline
+\end{longtable}
+
 \subsection{Usability Survey Questions?}
 
 \wss{This is a section that would be appropriate for some projects.}
