Added Maintenance tests

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -367,6 +367,27 @@ How test will be performed: An automated script with regression tests will run w
 
 \end{enumerate}
 
+\subsubsection{Maintainability and Support}
+		
+\paragraph{Maintenance Tests}
+
+\begin{enumerate}
+
+\item{Ease of Change: T-MS1\\}
+
+Related Reqs: NFR-MR0
+
+Type: Manual, Static
+					
+Initial State: Application's source repository contains complete documentation.
+					
+Input/Condition: Competent software developer who has not previously worked on the app reviews documentation and attempts to perform tasks.
+					
+Output/Result: The developer can easily make a minor update to a specified part of the application.
+					
+How test will be performed: Give the developer time to read through the documentation. Give them a maintenance task, such as updating the size of the title font to 20px. Observe them and document how long it takes them and if they encountered any troubles.
+\end{enumerate}
+
 ...
 
 \subsection{Traceability Between Test Cases and Requirements}
