Added Cultural tests

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -549,6 +549,27 @@ How test will be performed: Tester will enter a SQL statement such as "\{valid e
 
 \end{enumerate}
 
+\subsubsection{Cultural}
+		
+\paragraph{Language Tests}
+
+\begin{enumerate}
+
+\item{Support of Different Languages: T-CU1\\}
+
+Related Reqs: NFR-CU1
+
+Type: Manual, Dynamic
+					
+Initial State: Application is deployed.
+					
+Input/Condition: Tester selects a language from a list of available languages.
+					
+Output/Result: All text on the website is translated and displayed in the selected language.
+					
+How test will be performed: Tester will check that the language selection list is accessible, and that the most popular languages are included. When a language is selected, the tester will check that the translation has been applied and there is no untranslated or gibberish text. This can be checked for each language.
+\end{enumerate}
+
 ...
 
 \subsection{Traceability Between Test Cases and Requirements}
