Added Usability survey questions

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -841,9 +841,16 @@ Their values are defined in this section for easy maintenance.
   IMPROVE\_IN\_ACC & 20 & \% & Improvement in accuracy of a user after practicing \label{IMPROVE_IN_ACC} \\ \hline
 \end{longtable}
 
-\subsection{Usability Survey Questions?}
-
-\wss{This is a section that would be appropriate for some projects.}
+\subsection{Usability Survey Questions}
+\begin{enumerate}
+  \item Did you use the help system to aid in completing your task? Yes/No
+  \item If you answered yes, please rate how useful it was in helping you accomplish your task: 1 (Not Useful) - 5 (Very Useful)
+  \item Did you use the quick start guide to aid in completing your task? Yes/No
+  \item If you answered yes, please rate the clarity and helpfulness of it: 1 (Not Helpful) - 5 (Very Helpful)
+  \item Did you notice the tool-tips or pop-ups providing contextual help as you worked? Yes/No
+  \item If you answered yes, please rate the clarity and usefulness of the in-app help indicators: 1 (Not Helpful) - 5 (Very Helpful)
+  
+\end{enumerate}
 
 \newpage{}
 \section*{Appendix --- Reflection}
